--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
     "node": "11.2.0"
@@ -15,9 +16,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "moment": "^2.29.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "expect": "^26.4.2",
+    "mocha": "^8.1.3",
     "nodemon": "^2.0.4"
   }
 }
